--- a/WRIT221/Portfolio/Portfolio.tex
+++ b/WRIT221/Portfolio/Portfolio.tex
@@ -1,20 +1,27 @@
-\documentclass[10pt,letterpaper]{article}
+\documentclass[12pt,letterpaper]{article}
 \usepackage[utf8]{inputenc}
-\usepackage{amsmath}
 \usepackage{amsfonts}
 \usepackage{amssymb}
-\usepackage{graphicx}
 \usepackage{setspace}
 
 \author{Brock Ellefson}
 \title{WRIT221 Portfolio}
-\pagenumbering{gobble}
 \begin{document}
 \maketitle
 \newpage
 \doublespacing
 \newpage
-\section*{Writings of the day}
+\tableofcontents
+\newpage
+\section{Reflective Analysis}
+I have learned a ton of new information this semester and ultimately feel like I grew a lot as a writer. In January, when class just started, I had almost no idea how to write professionally. I had no idea how to shape my material and present it in a professional manner, but luckily our class went over the groundwork and how to properly edit and revise. Pompous Diction was really helpful, I always associated 'technical writing' with big, complex, \$10 words. When in reality, these huge pretentious words are not necessary to get a point across and still have a professional tone.\\
+\\
+Ultimately as the semester went on I vastly improved in my writing abilities. 
+aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa
+aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa
+aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa
+\newpage
+\section{Writings of the day}
 \subsection*{1/17/17}
 \begin{verbatim}
 "In the big pizza wheel of life, sometimes you're the burnt crust
@@ -85,7 +92,25 @@ what shape your personality into a beautiful painting.
 Everything else is just basecoat of the acrylic. 
 \end{verbatim}
 I really enjoyed the writing of the day. I would consider myself a less professional writer and a lot stronger in creative style writing, so these beginning of the day creative writing pieces was a lot of fun for me, since I could write a little more comfortably with my strengths. However I feel like five minutes was not a large enough block of time to write complete thoughts with the material presented. In the future, I feel like if the class was using a little less complex writing topics and focuses or give us more time. That might just be a personal preference, I feel like I'm a little slower, more methodical writer in comparison to others, so I need more time to write a completely thought out, well structured paragraph. To me, five minutes just isn't enough time to read a poem, pick apart the symbolism and entendres, then pick a favorite line and talk about why that line is my favorite of the piece.\\
-\\
 It's difficult for me to make a choice on which one of my daily writings was my favorite. I really enjoyed the day when we listened to a song for about a minute and then wrote a small story based on the mood and mindset we were put in after listening to the song. I thought that was a really creative exercise, and it was really interesting how almost each student had a similar settings (i.e. almost everyone had a western theme when Marty Robbins played) yet their characters and plot were all extremely different and branched out in numerous ways. Then after three songs one master editor would combine some portion of three snippets of three students different stories into one massive 'Pulp Fiction' esc. story. I just really enjoyed that daily writing. However, my favorite part about the daily writings was not a specific writing itself but all of them as a whole. My voice and tone changed dramatically over the course of the semester. I was going through a lot of personal issues at the begging of the semester, so my tone of a lot of my writing was very dark, cynical, and monotone. Yet as the semester went on, my voice became more and more lighthearted and optimistic. Having a physical copy me periodically feeling better and better is really, really cool. Even reading through my five favorite daily writings I chose, you can see the tone changing ever so slightly each iteration. I think that is great. 
+
+
+
+\newpage
+\section{Instruction}
+I really enjoyed this assignment. I got to cover and talk about something I am really passionate about, and I think that passion translated into a great voice and tone in the paper. Yes I was professional in presenting my material, however the paper's flow was great and easy to read. It was pretty challenging trying to explain the techniques on the paper to someone who had no idea about the subject matter beforehand. Also having a visual representation was difficult to achieve as well. I included gifs to show my audience what would happen when using these techniques, thus making my paper only available or effective online. Otherwise this gifs can't be properly viewed. It was also difficult providing my audience with only information that is absolutely necessary in order to preform the task. If I could do this assignment again I would pick a subject with a broader audience. 
+
+\newpage
+\section{Cover Letter and Resume}
+This was my favorite unit. Lavey really helped all of us with what about us we should flaunt and how we should present ourselves. It was really difficult talking about myself, I had no idea what I should say about myself, what was important, and how to not sound either too full of myself or having no confidence. I was stuck for hours on the cover letter because of these issues. I made a mistake with the ' I am not the next Bill Gates nor Vint Cerf' line. Instead of sounding humble or realistic, it came off as young and not confident in my abilities, which is not the image I want to have a potential employer to have of me. I also brought up projects I worked on way back in high school. Honestly, these projects are not really important or impressive at this stage in my life, and I either should have let that section out or replaced it with more current projects that I'm working on.\\
+However I am very pleased with the resume. The formatting is beautiful and I was able to layout my unique strengths and previous work history in a clear, concise manner. I have a way better balance between confidence and humbleness in my executive summary of myself in comparison to the cover letter. \\
+Overall I learned a lot about how to be professional when talking about myself and how to basically 'sell' myself to an employer. 
+
+\newpage
+\section{Grant Proposal}
+The grant proposal is the quintessential professional writing assignment. Taking a professional government document and translating it into something that the average joe could comfortably read. Some difficulties I faced on this assignment was figuring about what was actually worth translating and what should not even be included. But this assignment not only taught me how to write a piece of professional and technical writing but also how to read a piece of extremely technical writing. It was important for me to read this grant and really understand it on a microscopic level so that I can translate easily. Another difficulty was minimizing all this information into just a few short paragraphs. However I did enjoy pretending to be a part of this fictional company trying to approve this grant and listing off a ton of reasons why I personally thing this company should support the grant. 
+
+\newpage
+\section{Policy Memo/Analysis/Presentation}
 
 \end{document}
