--- a/WRIT221/Portfolio/Portfolio.tex
+++ b/WRIT221/Portfolio/Portfolio.tex
@@ -14,12 +14,13 @@
 \tableofcontents
 \newpage
 \section{Reflective Analysis}
-I have learned a ton of new information this semester and ultimately feel like I grew a lot as a writer. In January, when class just started, I had almost no idea how to write professionally. I had no idea how to shape my material and present it in a professional manner, but luckily our class went over the groundwork and how to properly edit and revise. Pompous Diction was really helpful, I always associated 'technical writing' with big, complex, \$10 words. When in reality, these huge pretentious words are not necessary to get a point across and still have a professional tone.\\
+I have learned a ton of new information this semester and ultimately feel like I grew a lot as a writer. In January, when class just started, I had almost no idea how to write professionally. I had no idea how to shape my material and present it in a professional manner, but luckily our class went over the groundwork and how to properly edit and revise. Pompous Diction was really helpful, I always associated 'technical writing' with big, complex, \$10 words. When in reality, these huge pretentious words are not necessary to get a point across and still have a professional tone. Ultimately as the semester went on I vastly improved in my writing abilities on a technical standpoint. Looking at my beginning work and comparing it to the things I was writing at the end of the semester the evidence of growth is apparent.\\
 \\
-Ultimately as the semester went on I vastly improved in my writing abilities. 
-aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa
-aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa
-aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa
+However technical writing is extremely frustrating for me. I understand that it is an extremely important skill to have and if I go into video game development or something else in my Computer Science field I should expect to make a lot of report like this. I just don't find it as enjoyable as other forms or writing (poetry and short stories for me). Because of these, I just find myself not engaging my full potential in the class or in any of my papers. This translates into, honestly, poor poor writing. I wrote most of my papers as fast as I could a day or even just a few hours before they were due. I would either do very minimal editing, or skip it entirely. This has nothing to do with your teaching style or anything. I actually really enjoy the way you teach and the layout of the class is fantastic. I just really didn't enjoy writing any of the assignments, they were all out of my enjoyment level. I honestly felt restricted as a writer a lot of the time. I wish that you taught some sort of creative writing class because I would honestly love a class like that and would love to continue to learn more and expand my writing ability under your tutelage. It's just that this class specifically, with this material, is just not my forte and not things I enjoy writing.  \\
+\\
+Honestly, I feel like my skill as a writer did not improve, but my ability to channel my writing into different genres. I am now very familiar with the style, tone, and toner of technical writing, and also comfortable with writing reports, analysis, grant review etc. However my writing quality, flow, and voice is unchanged. I don't feel like I got any sort of boost of writing quality, instead just got new ways and genres to efficiently channel my thoughts and writing. 
+
+
 \newpage
 \section{Writings of the day}
 \subsection*{1/17/17}
@@ -112,5 +113,5 @@ The grant proposal is the quintessential professional writing assignment. Taking
 
 \newpage
 \section{Policy Memo/Analysis/Presentation}
-
+This was an interesting assignment. It was the first and only group assignment in the class, which came with a whole new set of new challenges. The memo was a very nice tool to have, it really streamlined our analysis was very helpful whenever we got lost and didn't know what to write next. We all had to try to find out when we were all free to work on the policy, which was pretty much impossible. So we all independently wrote and edited others work on a Google Doc. It was frustrating when I would have a vision of how the memo or analysis should be layed out and written, but someone else would disagree and we would have to come to a compromise. Even though we finished the analysis and I can honestly say that I am proud of it, it was very stressful having another person take responsibility for a section of the analysis, because a portion of my grade rests on their shoulders. That's how the real world works though I guess. The presentation was okay. Having five people in our group means that all of out material had to be stretched out pretty thin so that each member had a chance to speak. Also another group picked the exact same bill as us, so I feel like there was a lot of tension and pressure to have one group 'beat' the other groups presentation. Overall it was a nice learning experience working in a group, coming to conclusions together, and having people to bounce ideas off of instead of second guessing yourself.
 \end{document}
