--- a/ANTY101/Lab3/kin.tex
+++ b/ANTY101/Lab3/kin.tex
@@ -13,6 +13,7 @@
 \section*{My Kin}
 My kin consists of My grandmother (from my fathers side) Rose and her husband, of whom she remarried before I was born, Robert (or Bob). So even though he is not my actual grandfather by blood, he has filled in the role that Norman left when he died of leukemia. Next the adult generation of my kin. Michelle is my aunt, my dad's sister. Even though she lives in Denver and I don't see her much I still consider her family. Kyle is my dad and one of my closest friends. Even though he is my dad our relationship is more like close friends that happen to have a 23 year gap in age. We are very close and share very intimate details of our lives with each other. My mom is a drug addict with multiple mental health issues, so once she and my dad got divorced, I cut all contact with her, hence her not being in my clan. Cameron and Claire are my two younger siblings, whom both split their time between Heather and Kyle. Lilly is our Golden Retriever of whom means an awful lot to me. My dad got her for me as a present shortly after the divorce, and all summer long of 2013 Lilly and I were together. My dad works during the day and I worked at night at the time, so Lilly was really my only company I had. Naturally I became very attached to her and she and I bonded greatly that summer, hence why I included in my kin diagram. 
 \section*{Marie's Kin and Interview}
-I included Marie in my kin and I in her's, however that is the only similarity that we have in our kinship. Her and I have been very close for a long time and I consider her a younger sister of mine, however there is no actual blood relation between us. Nevertheless I view 
+I included Marie in my kin and I in her's, however that is the only similarity that we have in our kinship. Her and I have been very close for a long time and I consider her a younger sister of mine, however there is no actual blood relation between us. Nevertheless I view her as family, hence why I included her in my kin diagram. But because of this distance, and her not really knowing my immediate family nor I hers, she is my only connection to the rest of her kin. Her kin consists of her younger sister, Ty'reah, and her two dogs: Tank and Neeko as the youngest generation. The adult generation consists of her mom and dad, Victoria and Sheldon. Marie also has an older sister however they had a falling out a few months ago and Marie does not consider her a part of her kin anymore. 
 \section*{Claire's Kin and Interview}
+Claire is my younger sister, and unlike me, she still has our mom, Heather, in her life. Heather and Kyle have split custody of the younger kids, so Cam and Claire alternate living with them. Heather recently remarried a few years ago, and now has some step-children that Claire interacts with, along with her step-dad. As I mentioned earlier I cut Heather out of my life a few years ago, so that entire part of the kinship is unique from mine. Claire also clearly has no connection to Marie because they are not friends nor do they know each other. Perhaps if Marie and I lived in the same town as the rest of my family instead of Bozeman then perhaps the Marie, Claire, and the rest of my kinship would be more connected
 \end{document}
