--- a/CS432/CSCI432HW1.tex
+++ b/CS432/CSCI432HW1.tex
@@ -23,20 +23,19 @@ For each node, there is always an edge. The only exception is the root node, whi
 	\subsection*{quickSort}
 		Quicksort is a sorting algorithm that implements a divide and conquer strategy by breaking down an array into little pieces and sorting the small pieces.
 		
-\section{Pseudo-Code}
+\section{Pseudo-Code(With Seth and Jake)}
 \textbf{Algorithm:} Binary Search\\
 \textbf{Input:} Desired Value to search for\\
 \textbf{Output:} True or False\\
 \\
 max = last element in array\\
 min = 0\\
-\textbf{while} min < max
-
-
+\textbf{while} min <= max\\
      mid = max + min / 2\\
-
-
-	\textbf{if}
+	\textbf{if} mid.value == desired value\\
+	return true\\
+	else if mid.value
+	
 
 
 
