--- a/CS432/HW3/CSCI432HW3.tex
+++ b/CS432/HW3/CSCI432HW3.tex
@@ -4,6 +4,7 @@
 \usepackage{amsfonts}
 \usepackage{amssymb}
 \usepackage{graphicx}
+\usepackage{algorithmic}
 \author{Brock Ellefson}
 \title{CSCI432 Homework 3}
 \begin{document}
@@ -19,6 +20,20 @@ the same key should remain the same (in words, this
 should be a stable sorting algorithm). Use O(1) additional
 space and O(n) time.}
 
+\begin{algorithmic}
+\STATE{\bf{FALSE key order}}
+\STATE{\bf{in:} boolean array}
+\STATE{\bf{out:} stable sorted boolean array}
+\STATE{f = 0}
+\FOR{i in array}
+	\IF{array[i] == FALSE}
+		\STATE{swap(array[f],array[i])}
+		\STATE{f++}
+	\ENDIF
+\ENDFOR
+\end{algorithmic}
+
+
 \section{Suppose you have an unfair
 coin, where the probability of landing heads (H) is
 25 and the probability of tails (T) is 75.}
@@ -30,11 +45,6 @@ Well, since theres a 75\% if getting a tails, our expected number of flips is 4
 
 \section{What is the expected number of coin tosses
 needed in order to obtain three consecutive heads.}
-T = $\frac{3}{4}$ \\
-HT = $\frac{3}{16}$ 
-
-
-
 
 X = $\dfrac{1-p^{h}}{p^{h}(1-p)}$\\\\
 X = $\dfrac{1-.25^{3}}{.25^{3}(1-.25)}$ = 84\\\\
