assignment 2 2.1 recieve almost complete

--- a/Junior Year/WRIT221/Resume/CoverLetter.tex
+++ b/Junior Year/WRIT221/Resume/CoverLetter.tex
@@ -9,13 +9,15 @@
 
 \begin{document}
 
-Dear ID Tech\\\\
-My name is Brock Ellefson, I saw your listing for instructors for your summer programming camps and I am very interested in your  programming instructor position. Mentoring children is something I enjoy and having the opportunity to help them understand and enjoy computing would change their lives and being a part of that would be incredible. \\ 
+Dear Arenanet\\\\
+My name is Brock Ellefson, I saw your listing for a programming intership and am incredibly interested. Guild Wars 2 is a huge part of my life and is actually what got in interested in video game development and computer science in the first place. This company, and Guild Wars 2 are very special to me and I would like to take this opportunity to learn as much as I can under your tutelage and apply what I've learned in school and in my free time to the real world.  \\ 
 
 
-This is currently my third year studying Computer Science at Montana State University. Despite being an undergraduate, I have a lot of experience in programming. I am not the next Bill Gates nor Vint Cerf however I am very passionate about computer science, constantly pushing myself to expand my knowledge of coding. I programmed my first 2D game from scratch on Blitz Basic. It was complete with sprites as well as custom-made sounds. Right now I'm in the process of independently developing my first android app, GroupEffort, in my spare time. I possess a lot of patience when it comes to working with kids, not only was I a mentor for freshmen in high school, but I have also been a youth soccer coach for a brief time. Being a computer salesmen for Staples, I gained a lot of customer service experience selling software and answering any inquires a customers has.\\   
+This is currently my fourth year studying Computer Science at Montana State University. Despite being an undergraduate, I have demonstrable  experience in programming. I am not the next Bill Gates nor Vint Cerf however I am very passionate about computer science, constantly pushing myself to expand my knowledge of coding. I programmed my first 2D game from scratch on Blitz Basic. It was complete with sprites as well as custom-made sounds. Right now I've recently began process of independently developing an indie game on the Unity 3d engine in my spare time.\\   
 
-An old boss of mine Samuel Quick, a network administrator, always thought merging my talented people skills with my knowledge of programming would be the best course for me. Hopefully you consider me a qualified applicant. Attached is my resume, feel free to contact me via cell phone or email. I look forward to hearing from you.
+
+An old boss of mine Samuel Quick, a network administrator, always thought merging my people skills with my knowledge of programming would be the best course for me. Hopefully you consider me a qualified applicant. Attached is my resume, feel free to contact me via cell phone or email. I look forward to hearing from you.
+
 
 Thank you for your time, \\
 Brock
