--- a/CS432/HW4/CSCI432HW4.tex
+++ b/CS432/HW4/CSCI432HW4.tex
@@ -49,8 +49,16 @@ A metric is a function d: X x X $\rightarrow$ $\R$ such that:
   \item d(x,y) $\geq$ 0
 \end{enumerate}
 So,\\
+Given p = 1, then\\
+d$_{1}$(x,y) = $\Vert$(x$_{1}$ - y$_{1}$)$^{1}$ + (x$_{2}$ - y$_{2}$)$^{1}$ $\Vert$$^{1}$ \\
+= $\Vert$(x$_{1}$ - y$_{1}$)$^{1}$ + (x$_{2}$ - y$_{2}$)$^{1}$$\Vert$\\
+= $\delta$\\
+\\
+d$_{1}$(y,x) = $\Vert$(y$_{1}$ - x$_{1}$)$^{1}$ + (y$_{2}$ - x$_{2}$)$^{1}$ $\Vert$$^{1}$ \\
+= $\Vert$(y$_{1}$ - x$_{1}$)$^{1}$ + (y$_{2}$ - x$_{2}$)$^{1}$$\Vert$\\
+= $\delta$\\
 $\forall$ x,y $\in$ L$_{p}$, d(x,y) = $\delta$ and d(y,x) = $\delta$. $\delta$ = $\delta$. This satisfies condition 1.\\
-Given p = 1
+
 $\forall$ x,y $\in$ L$_{p}$, if  d(x,y) = 0 then x and y are located at the same coordinates. Therefore x = y. This satisfies condition 2.
 
 
