--- a/CS432/HW5/CSCI432HW5.tex
+++ b/CS432/HW5/CSCI432HW5.tex
@@ -75,7 +75,7 @@ Therefore, T(n) =  $\theta(n^{2.71})$
 	\includegraphics[scale = .25]{recurtree1hw5.png}
 \end{figure}
 
-\noindent Our longest path in this tree is the rightmost path, following a sequence: $log_{3}n$. So our initial guess is for this recurrence is $O(nlogn)$.\\
+\noindent Our longest path in this tree is the leftmost path, following a sequence: $log_{2}n$. So our initial guess is for this recurrence is $O(nlogn)$.\\
 \\
 
 
